--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div id="pop-up">
         
             <h2>Game Over</h2>
+            <h2 id = 'final'></h2>
             <button id="btn-close">Retry</button>
         </div>
 
@@ -31,7 +32,7 @@
             <p>Hint: Fruit </p>
 
             <div id = "letterbox"><h2 id = "letters"></h5></div>
-            <p id = "ccc">Here is the testing section</p>
+            <p id = "ccc"></p>
             <p id = "ddd"></p>
             <div class="text-center" id = "alphabet"></div>
             
